# ninja2nix

./: README.md  ninja2nix.cabal  release.nix  shell.nix
executables/ninja2nix/: Main.hs
nix/: incremental.nix
nix/haskell/: language-ninja.nix  ninja2nix.nix
tests/: Main.hs
