name:                     ninja2nix
version:                  0.1.0
stability:                Experimental
build-type:               Simple
cabal-version:            >= 1.10
category:                 Build
copyright:                Copyright 2017 Awake Security
author:                   Awake Security
maintainer:               Awake Security <opensource@awakesecurity.com>
license:                  Apache-2.0
license-file:             LICENSE.md
homepage:                 https://github.com/awakesecurity/ninja2nix
bug-reports:              https://github.com/awakesecurity/ninja2nix/issues
category:                 Build
synopsis:                 Convert a Ninja build file into a Nix derivation.
description:              Convert a Ninja build file into a Nix derivation.

source-repository head
    type:                 git
    branch:               master
    location:             https://github.com/awakesecurity/ninja2nix.git

library
    hs-source-dirs:       library
    build-depends:        language-ninja              -any
                        , base                        >= 4.8   && < 5.0
                        , aeson                       >= 1.0   && < 1.3
                        , aeson-pretty                >= 0.8   && < 0.9
                        , bytestring                  >= 0.10  && < 0.11
                        , containers                  >= 0.5   && < 0.6
                        , concurrent-supply           >= 0.1   && < 0.2
                        , flow                        >= 1.0   && < 1.1
                        , hashable                    >= 1.2   && < 1.3
                        , lens                        >= 4.15  && < 4.16
                        , makefile                    >= 1.0   && < 1.1
                        , mtl                         >= 2.2   && < 2.3
                        , prettyprinter               >= 1.1   && < 1.2
                        , prettyprinter-ansi-terminal >= 1.1   && < 1.2
                        , text                        >= 1.2   && < 1.3
                        , transformers                >= 0.5   && < 0.6
                        , unordered-containers        >= 0.2   && < 0.3
                          -- FIXME: remove unneeded dependencies
    exposed-modules:      NinjaToNix
                        , NinjaToNix.Pretty
                        , NinjaToNix.Types
                        , NinjaToNix.Misc.Supply
    default-language:     Haskell2010
    other-extensions:     OverloadedStrings
                          -- FIXME: add the rest of the extensions used
    ghc-options:          -Wall -g -O0
                          -fno-warn-type-defaults
                          -fno-warn-unused-do-bind
                          -- FIXME: remove all unused imports
                          -fno-warn-unused-imports

test-suite tests
    type:                 exitcode-stdio-1.0
    hs-source-dirs:       tests
    main-is:              Main.hs
    build-depends:        base, ninja2nix
    default-language:     Haskell2010
    ghc-options:          -threaded -Wall -O0

executable ninja2nix
    hs-source-dirs:       executables/ninja2nix
    main-is:              Main.hs
    build-depends:        base, ninja2nix
    default-language:     Haskell2010
    ghc-options:          -threaded -Wall -O0
